# stock_price_simulator

./: .gitignore  LICENSE  README.md  generator.py  main.py  maths.py  pyproject.toml  requirements.txt
src/stock_price_simulator/: history.py
tests/stock_price_simulator/: candle.py
utils/: candle.py  history.py  indicators.py
