[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock_price_simulator"
version = "0.0.4"
authors = [
  { name="Cereal38", email="guillaume.bruncosmegazot@gmail.com" },
]
description = "A stock price simulator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/Cereal38/stock_price_simulator"